# wstream

./: CMakeLists.txt
common/: CMakeLists.txt
ggml/src/: ggml-alloc.c
ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  fattn-common.cuh  fattn-tile-f16.cu  fattn-tile-f32.cu  fattn-vec-f16.cuh  fattn-vec-f32.cuh  ggml-cuda.cu
include/: whisper.h
src/: whisper.cpp
stream/: CMakeLists.txt  README.md  common-sdl.cpp  common-sdl.h  stream.cpp
stream2.wasm/: .env.example  CMakeLists.txt  Dockerfile  INSTRUCTIONS.md  README.md  audio-buffer.js  continuous.worklet.js  emscripten.cpp  index.html  index.html.orig.html  libstream.js  libstream.wasm  render.yaml  requirements.txt  server.py  test_server.py
